Fixed URL bar scrollbar on Firefox

--- a/src/main.css
+++ b/src/main.css
@@ -33,13 +33,18 @@ div.half {
 	border-bottom:1px solid #fff;
 }
 
+#URLwrap {
+	height:49px;
+	width:calc(100% - 150px);
+	overflow:hidden;
+	margin:0;
+	display:inline-block;
+}
 #url {
 	-moz-appearance:textfield;
 	-webkit-appearance:textfield;
 	border:none;
-	height:49px;
 	font-size:30px;
-	width:calc(100% - 150px);
 	font-weight:300;
 	padding-left:5px;
 	font-family:"Open Sans", verdana;
@@ -52,7 +57,6 @@ div.half {
 	white-space:nowrap;
 	
 	overflow-x:scroll;
-    padding-bottom:17px;
 	/* hide scrollbar on IE only */
 	-ms-overflow-style:none;
 	
@@ -104,7 +108,7 @@ span.url-faded {
 	font-size:30px;
 	float:left;
 	padding:0 5px;
-	height:50px;
+	height:49px;
 	line-height:50px;
 	color:#000;
 	border-right:1px solid #fff;
